[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/ui/audio/AudioManager.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/audio/music/the-medieval-banquet.mp3" type="AudioStream" id=2]
[ext_resource path="res://scenes/ui/audio/sounds/26198__tobyk__medieval-fanfare1.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/ui/audio/sounds/26198__tobyk__medieval-fanfare2.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/ui/audio/sounds/99860__menegass__lyr_hit2.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/ui/audio/sounds/99750__menegass__adrum9.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/ui/audio/sounds/99729__menegass__clp2.wav" type="AudioStream" id=7]
[ext_resource path="res://scenes/ui/audio/sounds/321083__benjaminnelan__wooden-click.wav" type="AudioStream" id=8]

[node name="AudioManager" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0
bus = "Music"

[node name="CorrectLetter" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Sounds"

[node name="IncorrectLetter" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sounds"

[node name="WordComplete" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Sounds"

[node name="DevilDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sounds"

[node name="DevilSpawn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sounds"

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Sounds"
